Refactoring (#26)
* Populated periodic table

* Refactoring

* New version 0.0.2